--- a/frigate/templates/rst.jinja2
+++ b/frigate/templates/rst.jinja2
@@ -1,8 +1,14 @@
+{% extends "base.jinja2" %}
+{% block title -%}
 {{ name }}
 ======================
+{% endblock -%}
 
+{% block description -%}
 {{ description }}
+{% endblock -%}
 
+{% block table -%}
 ================================================== ================================================== ==================================================
 Parameter                                          Description                                        Default
 ================================================== ================================================== ==================================================
@@ -12,3 +18,4 @@ Parameter                                          Description                  
 {{ "%-50s" | format(param) }} {{ "%-50s" | format(comment) }} {{ "%-50s" | format(default) }}
 {% endfor -%}
 ================================================== ================================================== ==================================================
+{% endblock -%}
