--- a/frigate/templates/base.jinja2
+++ b/frigate/templates/base.jinja2
@@ -1,3 +1,4 @@
 {% block title %}{% endblock %}
 {% block description %}{% endblock %}
 {% block table %}{% endblock %}
+{% block credits %}{% endblock %}
