Add custom templates, document this and improve testing

--- a/frigate/templates/base.jinja2
+++ b/frigate/templates/base.jinja2
@@ -1,4 +1,7 @@
+{% block header %}{% endblock %}
 {% block title %}{% endblock %}
 {% block description %}{% endblock %}
 {% block table %}{% endblock %}
+{% block footnotes %}{% endblock %}
 {% block credits %}{% endblock %}
+{% block footer %}{% endblock %}
