Add support for multiline json in tables
- Since MD syntax does not really support it so I've created
table using html table syntax and it seems to render perfectly.

Pending items
--------------

- rst and html templates.

Fixes #17 #24

--- a/frigate/templates/html.jinja2
+++ b/frigate/templates/html.jinja2
@@ -44,7 +44,7 @@
   <tr>
     <td><code>{{ param }}</code></td>
     <td>{{ comment }}</td>
-    <td><code>{{ default }}</code></td>
+    <td><pre>{{ default }}</pre></td>
   </tr>
   {% endfor -%}
 </table>
